# stuff

./: .gitignore  Dockerfile  README.md  buildroot.docker  design.md
c/: dockerfile
c/lobby/nanomsg/: CMakeLists.txt
c/lobby/nanomsg/libs/: nn.cmake
c/lobby/nanomsg/src/: CMakeLists.txt  a.out  broker.c  broker.h  client.c  connection.c  connection.h  list_test.c  net.c  net.h  server.c  system.h
c/lobby/zmq/: CMakeLists.txt
c/lobby/zmq/libs/: zmq.cmake
c/lobby/zmq/src/: CMakeLists.txt  broker.c  broker.h  client.c  connection.c  connection.h  list.h  net.c  net.h  server.c  server.h  system.c
c/zmq/ping-pong/: Makefile  zmq_client.c  zmq_server.c
cmder/: agent.cmd
docker/: Makefile  angular.docker
dotfiles/: .Xdefaults  .Xresources  .aliases  .bash_prompt  .bashrc  .chunkwm_plugins  .chunkwmrc  .ctags  .extra  .functions  .gdbinit  .gitconfig  .inputrc  .khdrc  .macos  .p10k.zsh  .profile  .telnetrc  .tmux.conf  .tmux.reset.conf  .vimrc  .xinitrc  .zshrc  setup.sh  setup_dotfiles.sh  setup_vim.sh  setup_zsh.sh  update_vim.sh
fish/: config.fish
fish/functions/: svnroot.fish
git/: fixauthors.sh
i3/: config  i3exit
outlook/: trusted_trio.otm
python/: rec.py  tk_cache.py  tk_colors.py  tk_heartharena.py  tk_html.py  tk_playback.py  tk_sound.py  tk_twitter.py  tk_weather.py  tk_weather_test_data_current.json  tk_weather_test_data_forecast.json  tk_writexml.py
templates/: design.md
terminator/: config
termite/: config
various/: git_mv_all  sed_refactor
various/alu/: Dockerfile  blueprint.proto  build.sh  build_and_upload_current  test.py  upload.sh  watcher2  watcher3
vim/: molokai.vim
wifi/: wlp2s0-WLAN-NXP
